FIX, STYLING - Made carousel on homepage projects text absolutely positioned so they always align properly

--- a/new/css/index.css
+++ b/new/css/index.css
@@ -132,8 +132,11 @@ body {
         -ms-transform: skewX(-9deg);
         transform: skewX(-9deg);
         font-family:'Lato';
-        position: relative;
-        top: 2px
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+        width: 181px;
+        text-align: center;
     }
 
     #project-name a {
@@ -159,6 +162,9 @@ body {
         position: relative;
         left: -1px;
         font-family:'Lato';
+        position: absolute;
+        bottom: 0px;
+        left: 180px;
     }
 
     #project-description h1 {
